ejs templates in place and ready for data

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,6 +10,6 @@
 </div>
 
 <h1> <%= title%> translation <%= translation %> </h1>
-<!-- <% include partials/map %> -->
+<% include partials/map %>
 
 <% include partials/footer %>
