--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,6 +1,47 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:700,900);
 
-body { background-color: #0e83cd }
+body { background-color: #42bfed }
+nav {
+}
+
+.talkbubble {
+  position: relative;
+  width: 300px;
+  height: 125px;
+
+  padding: 10px;
+  border-radius: 5px;
+  border: solid lightblue;
+  background: lightblue;
+}
+
+.talkbubble:before {
+  content:"";
+  position: absolute;
+  right: 100%;
+  top: 26px;
+  width: 0;
+  height: 0;
+
+  border-top: 13px solid transparent;
+  border-right: 26px solid lightblue;
+  border-bottom: 13px solid transparent;
+}
+
+.talkbubble textarea {
+  position: inherit;
+  width: inherit;
+  height: inherit;
+  background: inherit;
+
+  margin: 0;
+  padding: 0;
+
+  border: none;
+  resize: none;
+}
+
+
 ul {
     list-style-type: none;
     margin: 0;
