--- a/server/views/partials/beermug.ejs
+++ b/server/views/partials/beermug.ejs
@@ -1,4 +1,4 @@
-<div id="container" style="float: right">
+<div id="container" style="float: left">
   <div class="pour"></div>
   <div id="beaker">
     <div class="beer-foam">
