--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -8,4 +8,4 @@
 
 </head>
 <!-- <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"> -->
-<body margin= "auto">
+<body >
