--- a/server/views/partials/map.ejs
+++ b/server/views/partials/map.ejs
@@ -1,4 +1,4 @@
-<table id="Table_01" width="600" height="526" border="0" cellpadding="0" cellspacing="0" style="float: left">
+<table id="Table_01" width="600" height="526" border="0" cellpadding="0" cellspacing="0" >
   <tr>
     <td>
       <a href="alaska"
